# axum-solid-template

./: .gitignore  AGENTS.md  setup-postgres.sh
be/: Cargo.toml  OVERVIEW.md  build.rs  diesel.toml  setup-postgres.sh
be/.cargo/: config.toml
be/migrations/2026-04-28-000000-0000_auth_reference_foundation/: down.sql  up.sql
be/migrations/2026-04-28-007000-0000_auth_roles_service_provider/: down.sql  up.sql
be/migrations/2026-04-28-008000-0000_job_runs/: down.sql  up.sql
be/migrations/2026-05-03-000000-0000_email_verification_challenges/: down.sql  up.sql
be/migrations/2026-05-04-000000-0000_auth_refresh_sessions/: down.sql  up.sql
be/migrations/2026-05-04-010000-0000_marketplace_platform/: down.sql  up.sql
be/migrations/2026-05-17-000000-0000_provider_profile_subdivision/: down.sql  up.sql
be/src/: build_info.rs  main.rs  schema.rs
be/src/controller/: auth.rs  healthcheck.rs  mod.rs
be/src/controller/v1/: auth.rs  healthcheck.rs  mod.rs  reference_data.rs
be/src/controller/v1/auth/: admin.rs  mod.rs  protected.rs  public.rs  session.rs  support.rs  verification.rs
be/src/controller/v1/marketplace/: admin.rs  mod.rs  provider.rs  public.rs  user.rs
be/src/docs/: api_doc.rs
be/src/domain/: iso.rs  mod.rs
be/src/domain/auth/: email_verification_challenge.rs  jwt.rs  mod.rs  refresh_session.rs  role.rs  user.rs  user_role.rs  value.rs
be/src/domain/marketplace/: enum_sql.rs  enums.rs  media.rs  mod.rs  moderation.rs  payments.rs  provider.rs  search.rs
be/src/dto/: api_response.rs  api_response_tests.rs  healthcheck.rs  mod.rs  reference_data.rs
be/src/dto/auth/: request.rs  response.rs
be/src/dto/marketplace/: mapper.rs  mod.rs  request.rs  response.rs
be/src/error/: api_error.rs  api_error_tests.rs  code_error.rs  mod.rs  prelude.rs
be/src/init/: db_pool.rs  mod.rs  server_init.rs
be/src/init/config/: db_config.rs  file_store_config.rs  mod.rs  server_config.rs
be/src/init/config/chatbot/: chatbot_config.rs  generation.rs  mistral.rs  mod.rs
be/src/init/config/jwt_config/: debug.rs  jwt_config.rs  mod.rs  validation.rs
be/src/init/config/server_config/: env.rs  jwt_env.rs  mod.rs  parsers.rs  server_config.rs
be/src/init/jwt_config/: jwt_config.rs
be/src/init/logging/: logging.rs
be/src/init/server_config/: cert_env.rs  chatbot_env.rs  db_config.rs  env.rs  file_store_config.rs  http_security_config.rs  http_security_env.rs  jwt_env.rs  mail_config.rs  mail_env.rs  marketplace_config.rs  mod.rs  parsers.rs  server_config.rs
be/src/init/server_config/chatbot/: claude.rs  generation.rs  mistral.rs  mod.rs
be/src/init/server_config/jwt_config/: debug.rs  jwt_config.rs  validation.rs
be/src/init/server_init/: error.rs  lifecycle.rs  mod.rs  runtime.rs
be/src/init/state/: mod.rs  server_state.rs
be/src/init/state/cache/: email_verification.rs  mod.rs  reference_data.rs
be/src/middleware/: api_timing.rs  auth.rs  auth_state.rs  mod.rs  origin.rs  request_response_logging.rs
be/src/repository/: mod.rs
be/src/repository/auth/postgres/: email_verification_token_repository.rs  mod.rs  password_reset_token_repository.rs  refresh_session_repository.rs  user_repository.rs  user_role_repository.rs
be/src/repository/marketplace/postgres/: admin_repository.rs  media_repository.rs  mod.rs  moderation_repository.rs  payment_repository.rs  provider_repository.rs
be/src/router/: app.rs  marketplace.rs  mod.rs  redirect.rs  static_asset_encoding.rs  static_assets.rs
be/src/service/: admin.rs  mod.rs  reference_data.rs
be/src/service/auth/: datasource.rs  email.rs  login.rs  mod.rs  password_reset.rs  session.rs  signup.rs  user.rs  verification.rs
be/src/service/auth/verification/: admin.rs  answer.rs  consts.rs  issue.rs  mod.rs  pow.rs  response.rs  submit.rs  validation.rs
be/src/service/marketplace/: admin.rs  authz.rs  cache.rs  indexing.rs  markdown.rs  mod.rs  moderation.rs  provider.rs  provider_media.rs  public.rs  search.rs  user.rs  validation.rs
be/src/util/: mod.rs
be/src/util/auth/: cookie.rs  jwt.rs
be/src/util/crypto/: password.rs  token.rs
be/src/util/email/: mod.rs  sender.rs  templates.rs
be/src/util/string/: validation.rs
(+160 files in other folders)
