[package]
name = "be"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "unwind"

[dependencies]
# async runtime
tokio = { version = "1.52.1", features = ["full"] }

dotenvy = { version = "0.15.7" }

# loggers
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json"] }
tracing-appender = "0.2.5"

[build-dependencies]
chrono = { version = "0.4.44" }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
